Add quiz endpoint updated, code revised

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
 <div id="game-over-div" class="hidden">
 	<p>Game Over!</p>
-	<button type="next" id='return-to-list' onclick='loadGameList()'>Return to Game List</button>
+	<button type="next" id='return-to-list' onclick='renderGameList()'>Return to Game List</button>
 </div>
 
 
