Correct preventDefault usage

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
 </div>
 
 
-<form id="enter-email-username" class='centered' onsubmit="submitEmail()">
+<form id="enter-email-username" class='centered' >
       <label>Email</label>
       <!--Label for= -->
       <input type="text" id="email-username-input" placeholder="E-Mail Address">
-      <button type="submit">Submit</button>
+      <button type="button" onclick="submitEmail(this)">Submit</button>
 </form>
 
 
